fix header spacing

--- a/css/main.css
+++ b/css/main.css
@@ -158,3 +158,7 @@ a:visited { color: #a0a; }
 .post pre.terminal code {
   background-color: #333;
 }
+
+.post h1, .post h2, .post h3, .post h4, .post h5 {
+  margin: 1em 0;
+}
